<resources>
    <string name="main_name">module-main</string>
    <string name="splash_slogan">Daily appetizers for your eyes，Bon eyepetit</string>
    <string name="splash_description">每日精选视频推介，让你大开眼界。</string>

    <!--弹窗-->
    <string name="encourge">如果你喜欢 %1$s 的设计，感觉本项目的源代码对你的学习有所帮助，可以给个 \"Star\" 支持一下，谢谢！^_^</string>
    <string name="give_good_review">- 给个好评呗 -</string>
    <string name="encourage">鼓励一下</string>
    <string name="not_encourage">我就不给</string>

    <!-- 登录 -->
    <string name="forgot_password">找回密码</string>
    <string name="login_tips">登录后即可关注作者、\n发表评论、同步收藏视频和播放记录</string>
    <string name="Input_iphone_or_email_tips">请输入手机号/邮箱地址</string>
    <string name="input_password_tips">请输入密码</string>
    <string name="login">登录</string>
    <string name="user_register">用户注册</string>
    <string name="author_login">作者登录</string>
    <string name="login_register_agree_tips">登录或注册即同意开眼</string>
    <string name="user_service_agreement">用户服务协议</string>
    <string name="guide_login_tips_two">登录后即可查看评论回复、点赞及关注等通知信息</string>
    <string name="guide_login_tips_three">别错过重要的信息</string>
    <string name="guide_login_tips_four">点击登录后可关注主题和作者</string>
</resources>