<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_container"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".ui.LoginActivity">

    <include
        android:id="@+id/title_bar"
        layout="@layout/layout_title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_iv_slogan"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginTop="6dp"
        android:padding="8dp"
        android:src="@drawable/ic_logo_slogan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar" />

    <TextView
        android:id="@+id/login_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/login_tips"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/login_iv_slogan"
        app:layout_constraintStart_toStartOf="@id/login_iv_slogan"
        app:layout_constraintTop_toBottomOf="@id/login_iv_slogan" />

    <TextView
        android:id="@+id/login_tv_account"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="60dp"
        android:drawableStart="@drawable/ic_person_white_18dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/Input_iphone_or_email_tips"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/login_tv_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_bar"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:background="@color/whiteAlpha85"
        app:layout_constraintEnd_toEndOf="@id/login_tv_account"
        app:layout_constraintStart_toStartOf="@id/login_tv_account"
        app:layout_constraintTop_toBottomOf="@id/login_tv_account" />

    <TextView
        android:id="@+id/login_tv_password"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="60dp"
        android:drawableStart="@drawable/ic_password_white_lock_18dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/input_password_tips"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/login_tv_user_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_tv_account"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:background="@color/whiteAlpha85"
        app:layout_constraintEnd_toEndOf="@id/login_tv_password"
        app:layout_constraintStart_toStartOf="@id/login_tv_password"
        app:layout_constraintTop_toBottomOf="@id/login_tv_password" />

    <TextView
        android:id="@+id/login_tv_user_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@color/whiteAlpha50"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/blackAlpha85"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/login_tv_register"
        app:layout_constraintEnd_toEndOf="@id/login_tv_password"
        app:layout_constraintStart_toStartOf="@id/login_tv_password"
        app:layout_constraintTop_toBottomOf="@id/login_tv_password" />

    <TextView
        android:id="@+id/login_tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/user_register"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/login_tv_author"
        app:layout_constraintStart_toStartOf="@id/login_tv_user_login"
        app:layout_constraintTop_toBottomOf="@id/login_tv_user_login" />

    <TextView
        android:id="@+id/login_tv_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_login"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/login_tv_register"
        app:layout_constraintEnd_toEndOf="@id/login_tv_user_login"
        app:layout_constraintStart_toEndOf="@id/login_tv_register"
        app:layout_constraintTop_toTopOf="@id/login_tv_register" />

    <ImageView
        app:layout_constraintVertical_bias="0.6"
        android:id="@+id/login_iv_wechat"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/ic_account_login_wechat"
        app:layout_constraintBottom_toBottomOf="@+id/login_tv_protocol"
        app:layout_constraintEnd_toStartOf="@id/login_iv_qq"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_tv_register" />

    <ImageView
        android:id="@+id/login_iv_qq"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/ic_account_login_wechat"
        app:layout_constraintBottom_toBottomOf="@id/login_iv_wechat"
        app:layout_constraintEnd_toStartOf="@id/login_iv_weibo"
        app:layout_constraintStart_toEndOf="@id/login_iv_wechat"
        app:layout_constraintTop_toTopOf="@id/login_iv_wechat" />

    <ImageView
        android:id="@+id/login_iv_weibo"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:src="@drawable/ic_account_login_wechat"
        app:layout_constraintBottom_toBottomOf="@id/login_iv_wechat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_iv_qq"
        app:layout_constraintTop_toTopOf="@id/login_iv_wechat"/>
    <TextView
        android:id="@+id/login_tv_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register_agree_tips"
        android:textColor="#403b47"
        android:textSize="12sp"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toStartOf="@id/login_tv_protocol"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/login_tv_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/user_service_agreement"
        android:textColor="@color/whiteAlpha10"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/login_tv_des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_tv_des"
        app:layout_constraintTop_toTopOf="@id/login_tv_des"
       />

</androidx.constraintlayout.widget.ConstraintLayout>